--- a/common/function_config_prod.yaml
+++ b/common/function_config_prod.yaml
@@ -1,6 +1,14 @@
 # Configuration file for dev environment. Will apply to all functions, but will be overwritten by
 # configurations files in specific function folder.
-data_set_id: <COMMON DATA SET ID>
+data_set_id: 2052340866341834
 tenant_id: 16e3985b-ebe8-4e24-9da4-933e21a9fc81
 cdf_cluster: westeurope-1
-cdf_project: cdf-bootcamp-<n>-prod
+cdf_project: cdf-bootcamp-26-prod
+
+env_vars: {
+  "COGNITE_BASE_URL": "https://westeurope-1.cognitedata.com",
+  "COGNITE_PROJECT": "cdf-bootcamp-26-prod",
+  "COGNITE_TOKEN_URL": "https://login.microsoftonline.com/16e3985b-ebe8-4e24-9da4-933e21a9fc81/oauth2/v2.0/token",
+}
+data_set_id: 3451015040752734
+
