--- a/common/function_config_test.yaml
+++ b/common/function_config_test.yaml
@@ -1,6 +1,13 @@
 # Configuration file for dev environment. Will apply to all functions, but will be overwritten by
 # configurations files in specific function folder.
-data_set_id: <COMMON DATA SET ID>
+data_set_id: 6220344387588199
 tenant_id: 16e3985b-ebe8-4e24-9da4-933e21a9fc81
 cdf_cluster: westeurope-1
-cdf_project: cdf-bootcamp-<n>-test
+cdf_project: cdf-bootcamp-26-test
+
+env_vars: {
+  "COGNITE_BASE_URL": "https://westeurope-1.cognitedata.com",
+  "COGNITE_PROJECT": "cdf-bootcamp-26-test",
+  "COGNITE_TOKEN_URL": "https://login.microsoftonline.com/16e3985b-ebe8-4e24-9da4-933e21a9fc81/oauth2/v2.0/token",
+}
+data_set_id: 7076548814347568
